integrate into an API GW
